Login/Logout and session management works